--- a/_includes/profile-form.html
+++ b/_includes/profile-form.html
@@ -31,11 +31,11 @@
         Select Something
       </label>
       <div class="select-style">
-        <div class="input select required user_plan_id">
-          <select class="select" id="user_plan_id" name="user[plan_id]">
-            <option value="">Example 1</option>
-            <option value="">Example 2</option>
-            <option value="">Example 3</option>
+        <div class="input select required">
+          <select class="select" id="select-something" name="user[selection]" >
+            <option>Example 1</option>
+            <option>Example 2</option>
+            <option>Example 3</option>
           </select>
         </div>
       </div>
@@ -114,11 +114,16 @@
 
 
 <script type="text/javascript">
-bowtie.user.info(function(user){
+bowtie.user.profile(function(user){
   if(!user){
     // There is no user signed in
   }else{
     $("#user_name").val(user.name);
     $("#user_email").val(user.email);
     $("#user_plan").val(user.plan_id);
+    $("#twitter").val(user.twitter);
+    $("#user_info").val(user.info);
+    $("#select-something").val(user.selection);
+  }
+});
 </script>
